[package]
name = "envit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
thiserror = "2"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

azure_identity = "0.21"
azure_security_keyvault_secrets = "0.3"
azure_core = "0.21"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
